# dynamite

./: .dockerignore  .gitignore  .readthedocs.yaml  .zenodo.json  CHANGELOG.md  LICENSE.txt  README.md  build_petsc.py  config_extensions.py  pyproject.toml  requirements.txt  setup.py  tests.py
benchmarking/: .gitignore  MBL.py  benchmark.py  print_stats.py
docker/: Dockerfile  Dockerfile-cpu  Dockerfile-gpu  README.md  build.py
docs/: .gitignore  Examples.ipynb  FAQ.rst  Makefile  conf.py  containers.rst  dynamite.config.rst  dynamite.extras.rst  dynamite.operators.rst  dynamite.rst  dynamite.states.rst  dynamite.subspaces.rst  dynamite.tools.rst  index.rst  install.rst  pubs.md  requirements.txt  rtd_requirements.txt  tips.rst
docs/logo/: sketch.xoj
dynamite/: __init__.py  _imports.py  _utils.py  backend_impl.c  bitwise.py  computations.py  extras.py  info.py  makefile  msc.py  msc_tools.py  operators.py  setup.py  states.py  subspace.py  subspaces.py  tools.py  utils.py  validate.py
dynamite/_backend/: .gitignore  backend.c  bbuild.c  bbuild.pyx  bcuda_impl.cu  bcuda_impl.h  bcuda_template.cu  bcuda_template_private.h  bpetsc.pyx  bpetsc_impl.c  bpetsc_impl.h  bpetsc_template_1.c  bpetsc_template_1.h  bpetsc_template_2.c  bpetsc_template_2.h  bsubspace.pxd  bsubspace.pyx  bsubspace_impl.h  (+7 more)
examples/: 0-Overview.ipynb  1-BuildingOperators.ipynb  2-Subspaces.ipynb  3-ShellMatrices.ipynb
petsc_config/: complex-debug.py  complex-opt.py  cuda-debug.py  cuda-opt.py
tests/: Hamiltonians.py  README.md  helpers.py  numpy_operators.py  parity_tests.py  tests.py
(+165 files in other folders)
